--- a/27099PRtest.html
+++ b/27099PRtest.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <iframe srcdoc="<a href=tel:+1234567890>test</a>"></iframe>
+<iframe srcdoc="<a href=facetime-audio:+1234567890>test</a>"></iframe>
+<iframe srcdoc="<a href=facetime:+1234567890>test</a>"></iframe>
 </body>
 </html>
