--- a/27099PRtest.html
+++ b/27099PRtest.html
@@ -5,8 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<iframe srcdoc="<a style="font-size: 3em;" href=tel:+1234567890>tel: test</a>"></iframe>
-<iframe srcdoc="<a style="font-size: 3em;" href=facetime-audio:+1234567890>facetime-audio test</a>"></iframe>
-<iframe srcdoc="<a style="font-size: 3em;" href=facetime:+1234567890>facetime test</a>"></iframe>
+<iframe srcdoc="<a style="font-size: 300%;" href=tel:+1234567890>tel: test</a>"></iframe>
+<iframe srcdoc="<a style="font-size: 300%;" href=facetime-audio:+1234567890>facetime-audio test</a>"></iframe>
+<iframe srcdoc="<a style="font-size: 300%;" href=facetime:+1234567890>facetime test</a>"></iframe>
 </body>
 </html>
